[project]
name = "grocery-helper"
version = "0.1.0"
description = "A Streamlit app that integrates with AnyList to find optimal grocery pricing"
readme = "README.md"
authors = [
    { name = "Cuyler O'Brien", email = "cdo03c@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Streamlit UI
    "streamlit>=1.35.0",
    # HTTP client for AnyList API
    "httpx>=0.27.0",
    # Data validation / models
    "pydantic>=2.7.0",
    # Environment / config management
    "python-dotenv>=1.0.0",
    # Caching utilities
    "cachetools>=5.3.0",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
grocery-helper = "grocery_helper.cli:main"

[build-system]
requires = ["uv_build>=0.11.32,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=grocery_helper --cov-report=term-missing"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.16.0",
]
